--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@privy-io/react-auth": "1.88.4",
     "@privy-io/server-auth": "1.14.2",
     "@tailwindcss/forms": "^0.5.3",
+    "ethers": "^6.13.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
